# DesignMethodsExercises

./: .gitignore  README.md
ex1_starcraft/: CMakeLists.txt  main.cpp
ex1_starcraft/src/: tanks.h
ex2_length/: CMakeLists.txt  main.cpp
ex2_length/src/: inch.cpp  length.h  meter.cpp
ex3_suchai/: CMakeLists.txt  main.cpp
ex3_suchai/suchai/: command_rotate.cpp  command_rotate.h  command_takePicture.cpp  command_takePicture.h  commands.h  pictures.h  suchai.cpp  suchai.h
ex4_tamagotchi/: CMakeLists.txt  main.cpp
ex4_tamagotchi/src/: state.cpp  state.h  tamagotchi.h
ex4_tamagotchi/test/: CMakeLists.txt  testTamagotchi.cpp
ex5_library/: CMakeLists.txt
ex5_library/src/: CMakeLists.txt
ex5_library/src/item/: CMakeLists.txt  book.h  journal.h  psxgame.h  wiigame.h
ex5_library/src/item/core/: gameitem.h  item.h  lectureitem.h
ex5_library/src/matcher/: and.h  contains_name.h  date_gt.h  exact_date.h  exact_name.h
ex5_library/src/matcher/core/: matcher_binary.h  matcher_unary.h
ex5_library/test/: CMakeLists.txt  testItems.cpp  testLibrary.cpp  testMatchers.cpp
ex5_library_q1q2/src/matcher/: CMakeLists.txt  date_lt.h  or.h
ex5_library_q1q2/src/matcher/core/: matcher.h
